--- a/index.html
+++ b/index.html
@@ -3457,8 +3457,27 @@
                         }
                     } else if (contentType && contentType.includes('application/json')) {
                         const data = await response.json();
-                        statusMsg.className = 'status-message success';
-                        statusMsg.innerHTML = '✅ ' + (data.message || 'Request processed successfully!');
+
+                        // Check if response includes htmlWithLogo for immediate viewing
+                        if (data.htmlWithLogo || (data.sheetData && data.htmlWithLogo)) {
+                            const html = data.htmlWithLogo;
+                            const newWindow = window.open('', '_blank');
+
+                            if (newWindow) {
+                                newWindow.document.write(html);
+                                newWindow.document.close();
+                                setTimeout(() => newWindow.print(), 1000);
+
+                                statusMsg.className = 'status-message success';
+                                statusMsg.innerHTML = '✅ Invoice opened! Use Print or Save as PDF from the browser.';
+                            } else {
+                                statusMsg.className = 'status-message error';
+                                statusMsg.innerHTML = '❌ Popup blocked! Please allow popups for this site and try again.';
+                            }
+                        } else {
+                            statusMsg.className = 'status-message success';
+                            statusMsg.innerHTML = '✅ ' + (data.message || 'Request processed successfully!');
+                        }
                     }
 
                     // Update the invoice number field with the next number
@@ -3572,8 +3591,27 @@
                     } else if (contentType && contentType.includes('application/json')) {
                         // Handle JSON response (likely test response or confirmation)
                         const data = await response.json();
-                        statusMsg.className = 'status-message success';
-                        statusMsg.innerHTML = '✅ ' + (data.message || 'Quotation processed successfully!');
+
+                        // Check if response includes htmlWithLogo for immediate viewing
+                        if (data.htmlWithLogo) {
+                            const html = data.htmlWithLogo;
+                            const newWindow = window.open('', '_blank');
+
+                            if (newWindow) {
+                                newWindow.document.write(html);
+                                newWindow.document.close();
+                                setTimeout(() => newWindow.print(), 1000);
+
+                                statusMsg.className = 'status-message success';
+                                statusMsg.innerHTML = '✅ Quotation opened! Use Print or Save as PDF from the browser.';
+                            } else {
+                                statusMsg.className = 'status-message error';
+                                statusMsg.innerHTML = '❌ Popup blocked! Please allow popups for this site and try again.';
+                            }
+                        } else {
+                            statusMsg.className = 'status-message success';
+                            statusMsg.innerHTML = '✅ ' + (data.message || 'Quotation processed successfully!');
+                        }
                     } else {
                         // Fallback for unknown content types - try to display as text
                         const text = await response.text();
