--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional document generation system for invoices and quotations">
     <title>Revathie Gear Products - Document Generation System</title>
+
+    <!-- Enterprise Design System - Professional UI/UX Enhancement -->
+    <link rel="stylesheet" href="enterprise-design-system.css">
+    <link rel="stylesheet" href="enterprise-components.css">
+
     <style>
         * {
             margin: 0;
@@ -147,9 +152,33 @@
 
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 30px;
             margin-top: 50px;
+            max-width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        /* Make last 2 cards centered on second row */
+        .services-grid > .service-card:nth-child(4) {
+            grid-column: 1 / 2;
+        }
+
+        .services-grid > .service-card:nth-child(5) {
+            grid-column: 2 / 3;
+        }
+
+        /* Tablet layout: 2 cards per row */
+        @media (max-width: 1024px) and (min-width: 769px) {
+            .services-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .services-grid > .service-card:nth-child(4),
+            .services-grid > .service-card:nth-child(5) {
+                grid-column: auto;
+            }
         }
 
         .service-card {
@@ -1387,8 +1416,14 @@
             }
 
             .services-grid {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                grid-template-columns: 1fr;
                 gap: 20px;
+            }
+
+            /* Reset positioning on mobile - stack all cards */
+            .services-grid > .service-card:nth-child(4),
+            .services-grid > .service-card:nth-child(5) {
+                grid-column: auto;
             }
         }
 
@@ -2135,17 +2170,6 @@
                     </div>
 
                     <div class="service-card"
-                         onclick="navigateTo('databaseSelection')"
-                         onkeypress="handleCardKeyPress(event, 'databaseSelection')"
-                         tabindex="0"
-                         role="button"
-                         aria-label="Database feature - View invoices and quotations">
-                        <span class="service-icon" aria-hidden="true">🗄️</span>
-                        <h3 class="service-title">Database</h3>
-                        <p class="service-description">View all invoices and quotations</p>
-                    </div>
-
-                    <div class="service-card"
                          onclick="navigateTo('paymentsSelection')"
                          onkeypress="handleCardKeyPress(event, 'paymentsSelection')"
                          tabindex="0"
@@ -2154,6 +2178,17 @@
                         <span class="service-icon" aria-hidden="true">💳</span>
                         <h3 class="service-title">Payments</h3>
                         <p class="service-description">Track & manage payment status</p>
+                    </div>
+
+                    <div class="service-card"
+                         onclick="navigateTo('databaseSelection')"
+                         onkeypress="handleCardKeyPress(event, 'databaseSelection')"
+                         tabindex="0"
+                         role="button"
+                         aria-label="Database feature - View invoices and quotations">
+                        <span class="service-icon" aria-hidden="true">🗄️</span>
+                        <h3 class="service-title">Database</h3>
+                        <p class="service-description">View all invoices and quotations</p>
                     </div>
                 </div>
             </div>
@@ -9524,5 +9559,8 @@
         // END PAYMENTS SYSTEM FUNCTIONALITY
         // ==========================================
     </script>
+
+    <!-- Enterprise UI Utilities - Toast, Command Palette, Loading States -->
+    <script src="enterprise-ui-utils.js"></script>
 </body>
 </html>
